fix: solve custom search icon layout issue on AdvancedSearchFilterer

--- a/packages/ui-react-antd/styles/data-collection/advanced-search-filterer.less
+++ b/packages/ui-react-antd/styles/data-collection/advanced-search-filterer.less
@@ -25,10 +25,12 @@
         align-items: flex-start;
         margin-left: 15px;
 
-        .anticon-search {
-            position: absolute;
-            top: 8px;
-            left: 10px;
+        .input-prefix-icon {
+            .anticon {
+                position: absolute;
+                top: 8px;
+                left: 10px;
+            }
         }
 
         .query-filters-tags {
